# parallel_apriori_hybrid

./: .gitignore  Cargo.toml  LICENSE  a.bash  singularity.def
.github/workflows/: rust.yml
ci/: run-examples.sh
crates/apriori/: Cargo.toml
crates/apriori/src/: alone.rs  apriori.rs  array2d.rs  count.rs  hash_tree.rs  lib.rs  start.rs  storage.rs  transaction_set.rs  trie.rs
crates/apriori/tests/: apriori.rs
crates/apriori_tid/: Cargo.toml
crates/apriori_tid/src/: hybrid.rs  hybrid2.rs  lib.rs  tid.rs  tid2.rs
crates/apriori_tid/tests/: tid.rs
crates/count_distribution/: Cargo.toml
crates/count_distribution/src/: hybridrunner.rs  lib.rs  main_thread.rs  runner.rs
crates/parallel/: Cargo.toml
crates/parallel/src/: traits.rs
crates/tester/: Cargo.toml
crates/tester/src/: lib.rs  test_utils.rs
examples/: count_distribution.rs  count_distribution_hybrid.rs
src/: main.rs
