[package]
name = "parallel_apriori"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
mpi = "0.8.0"
apriori = { path = "crates/apriori" }
count_distribution = { path = "crates/count_distribution" }
parallel = { path = "crates/parallel" }
clap = { version = "4.5.38", features = ["derive"] }
apriori_tid = { path = "crates/apriori_tid" }
tester = { path = "crates/tester" }

[workspace]
members = [
    "crates/apriori",
    "crates/apriori_tid",
    "crates/count_distribution",
    "crates/parallel",
    "crates/tester",
]
